add time to objData

--- a/simdata_preprocessing.ipynb
+++ b/simdata_preprocessing.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +124,10 @@
     "\n",
     "obs_feature_list =  [msg.feature_rename_list for msg in obs_msg ]\n",
     "act_feature_list =  [msg.feature_rename_list for msg in act_msg ]\n",
-    "purge_feature_list = ['Time']\n",
+    "\n",
+    "time_feature_name = 'Time'\n",
+    "purge_feature_list=[]\n",
+    "purge_feature_list.append(time_feature_name)\n",
     "\n",
     "## Data processing\n",
     "act_filter_feature = ['m2','lfin','rfin','tfin','bfin','stick','m1','unused0', 'm0', 'unused1','unused2','unused3']\n",
@@ -163,6 +166,7 @@
     "    \"target_feature_list\":target_feature_list,\n",
     "    \"obs_feature_list\":obs_feature_list,\n",
     "    \"act_feature_list\":act_feature_list,\n",
+    "    \"time_feature_name\":time_feature_name,\n",
     "    \"purge_feature_list\":purge_feature_list,\n",
     "    \n",
     "    \"train_test_split_ratio\":train_test_split_ratio,\n",
@@ -178,6 +182,26 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Time']"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "purge_feature_list"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -186,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {
     "scrolled": true
    },
@@ -232,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,7 +264,8 @@
     "    def __init__(self, df=None, *params):\n",
     "        self.df = df\n",
     "        self.params = params\n",
-    "        \n",
+    "\n",
+    "        self.time = None\n",
     "        self.act = None\n",
     "        self.next_act = None\n",
     "        self.obs = None\n",
@@ -253,6 +278,7 @@
     "            self.update(df, params)\n",
     "        \n",
     "    def update(self, df, *params):\n",
+    "        self.time = self.get_time(df,params)\n",
     "        self.act, self.obs, self.next_act, self.next_obs = self.split_act_obs(df, params)\n",
     "        self.delta_obs = self.calculate_delta_obs(self.obs, self.next_obs)\n",
     "        self.len = len(self.df.index)-1\n",
@@ -304,12 +330,15 @@
     "            return df_new\n",
     "        else:\n",
     "            df = pd.concat([df, df_new], axis=0, ignore_index=True)\n",
-    "        return df"
+    "        return df\n",
+    "    \n",
+    "    def get_time(self, df, *params):\n",
+    "        return df[time_feature_name]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {
     "scrolled": true
    },
@@ -468,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {
     "scrolled": true
    },
@@ -493,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -732,13 +761,44 @@
        "[108684 rows x 12 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "objData.act"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0         101.075\n",
+       "1         101.080\n",
+       "2         101.085\n",
+       "3         101.090\n",
+       "4         101.095\n",
+       "           ...   \n",
+       "108680    642.740\n",
+       "108681    642.745\n",
+       "108682    642.750\n",
+       "108683    642.755\n",
+       "108684    642.760\n",
+       "Name: Time, Length: 108685, dtype: float64"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "objData.time"
    ]
   },
   {
