--- a/realdata_preprocessing.ipynb
+++ b/realdata_preprocessing.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,33 +26,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "## parameters\n",
     "exp_index = [\n",
-    "            'coil',\n",
-    "            'coil_double',\n",
-    "            'coil_reverse',\n",
-    "            'coil_reverse_double',\n",
-    "            'coil_down',\n",
-    "            'coil_reverse_down',\n",
-    "            'square',\n",
-    "            'square_double',\n",
-    "            'lines',\n",
-    "            'lines_reverse',\n",
-    "            'manual',\n",
-    "#             'manual_wind',\n",
-    "#             'coil_reverse_double_wind',\n",
-    "#             'coil_double_wind',\n",
-    "#             'squre_double_wind'\n",
+    "            'rb1_201208_113634_6ca016cb2a35d1893682c089b7e118cfe3376122',\n",
+    "            'rb1_201214_123513_6ca016cb2a35d1893682c089b7e118cfe3376122',\n",
+    "            'rb2_201208_120334_747cb38938c76c535739e377d7ddcf7941929cb6',\n",
+    "            'rb2_201214_124645_1fb28b582a0c07b1e0c355c96faae3a309a6a028',\n",
+    "            'rb3_201208_125205_480c461174624e388ace9ac04608f91aba1ad15c',\n",
+    "            'rb3_201214_125422_23f66a6fd5be1805bf7cd07b0b1bf6655c6d6fe2',\n",
+    "            'rb4_201208_130611_927a9fcc88f638d5794133d62908a81779df33dd',\n",
+    "            'rb4_201214_134747_ba0a89de34290b12aeac7a1962bb37d0b15bb022',\n",
+    "            'rb5_201208_132010_c1b0c71b7bf8e4fd28cd75e5b7e3015a2d19ed23',\n",
+    "            'rb5_201214_160837_2d7233b5a264488155044c3ef7380fa44a54c7ef',\n",
+    "            'rb6_201208_153458_50f011aee1008fd7935e8590229482234626fb28',\n",
+    "            'rb8_201208_182852_e26f0b4801296bc4b9e1a98870333bf47e1925ef',\n",
+    "            'rb9_201208_164241_4bc6e0115172ea94797ea0ce08fcc639b781de0a',\n",
+    "            'rb10_201208_164242_f3252431ffc58f5fc6b41dcf531f159d9b5f6221',\n",
+    "            'rb11_201208_164241_b03cfd1b1cf180055bc0bc2e3d0eee0e73435cbe',\n",
     "            ]\n",
     "\n",
-    "data_folder_path = './blimpSim/data/behaviour_policy'\n",
-    "results_path = './blimpSim/results'\n",
+    "data_folder_path = './blimpReal/data/behaviour_policy'\n",
+    "results_path = './blimpReal/results'\n",
     "\n",
-    "bool_convert_rosbag2csv = False\n",
+    "bool_convert_rosbag2csv = True\n",
     "\n",
     "    # *******************************************\n",
     "\n",
@@ -222,11 +222,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "data_folder_path: ./blimpReal/data/behaviour_policy\n",
+      "----------Start Converting Rosbag to CSV files----------\n",
+      "bag: start converting rb4_201208_130611_927a9fcc88f638d5794133d62908a81779df33dd.bag\n",
+      "[INFO]  Data folder ./blimpReal/data/behaviour_policy/rb4_201208_130611_927a9fcc88f638d5794133d62908a81779df33dd already exists. Not creating.\n"
+     ]
+    }
+   ],
    "source": [
     "if params[\"bool_convert_rosbag2csv\"]:    \n",
     "    import bagpy\n",
@@ -248,6 +259,7 @@
     "                for file in files:\n",
     "                    if file.endswith(\".bag\"):\n",
     "                        path = os.path.join(root,file)\n",
+    "                        print(f'bag: start converting {file}')\n",
     "                        self.rosbag2csv(path)\n",
     "                        print(f'bag: {file} convert to csv')\n",
     "        \n",
