--- a/simdata_analysis.ipynb
+++ b/simdata_analysis.ipynb
@@ -40,7 +40,7 @@
     "#     '20210320_015309',\n",
     "#     '20210320_042916',\n",
     "#     '20210320_071011',\n",
-    "    '20210321_224313',\n",
+    "#     '20210321_224313',\n",
     "#     '20210322_011202'\n",
     "            ]\n",
     "\n",
@@ -84,13 +84,11 @@
     "                          feature_list = ['Time',\n",
     "                              'twist.linear.x','twist.linear.y','twist.linear.z'], \n",
     "                          feature_rename_list = ['Time',\n",
-    "                              'velocity.linear.x','velocity.linear.y','velocity.linear.z']\n",
-    "                         )\n",
+    "                              'velocity.linear.x','velocity.linear.y','velocity.linear.z'])\n",
     "\n",
     "autopilotInfo_msg = Msg_structure(name = 'path_follower-AutopilotInfo',\n",
     "                              feature_list = ['Time','VelocityDesired.x','VelocityDesired.y','VelocityDesired.z'],\n",
-    "                              feature_rename_list = ['Time','target.velocity.x','target.velocity.y','target.velocity.z']\n",
-    "                             )                                        \n",
+    "                              feature_rename_list = ['Time','target.velocity.x','target.velocity.y','target.velocity.z'])                                        \n",
     "                             \n",
     "obs_msg = [\n",
     "#     position_msg,\n",
