time_series_clean

--- a/realdata_preprocessing.ipynb
+++ b/realdata_preprocessing.ipynb
@@ -51,9 +51,14 @@
     "            'rb11_201208_164241_b03cfd1b1cf180055bc0bc2e3d0eee0e73435cbe', \n",
     "            ]\n",
     "\n",
+    "policy_xy_not_z = True\n",
     "data_folder_path = './blimpReal/data/behaviour_policy'\n",
-    "results_path = './blimpReal/results'\n",
-    "mix_results_path = './blimpSim/mix_results'\n",
+    "if policy_xy_not_z: \n",
+    "    results_path = './blimpReal/results_XY'\n",
+    "    mix_results_path = './blimpSim/mix_results_XY'\n",
+    "else:\n",
+    "    results_path = './blimpReal/results_Z'\n",
+    "    mix_results_path = './blimpSim/mix_results_Z'\n",
     "\n",
     "name_space = 'machine_-'\n",
     "\n",
@@ -177,8 +182,12 @@
     "weigth_z_obs = 1 ##\n",
     "obs_reward_weights = (weight_xy_obs,weigth_z_obs)\n",
     "\n",
-    "if weigth_z_obs: realData_path = './blimpReal/results_Z' ##\n",
-    "if weight_xy_obs: realData_path = './blimpReal/results_XY' ##\n",
+    "if policy_xy_not_z:\n",
+    "    weight_xy_obs, weigth_z_obs = 1, 0 \n",
+    "    realData_path = './blimpReal/results_XY' \n",
+    "else:\n",
+    "    weight_xy_obs, weigth_z_obs = 0, 1 \n",
+    "    realData_path = './blimpReal/results_Z'\n",
     "\n",
     "## Create parameter dics\n",
     "params = {\n",
