--- a/realdata_preprocessing.ipynb
+++ b/realdata_preprocessing.ipynb
@@ -126,8 +126,8 @@
     "bool_convert_rosbag2csv = True\n",
     "\n",
     "pseudo_target_distribution_const = 0.2\n",
-    "pseudo_target_min = np.array([-5.5, -5.5, -1.2])\n",
-    "pseudo_target_max = np.array([5.5, 5.5, 1.2])\n",
+    "pseudo_target_min = np.array([-10, -10, -3])\n",
+    "pseudo_target_max = np.array([10, 10, 3])\n",
     "pseudo_target_name_list = autopilotInfo_msg.feature_rename_list\n",
     "pseudo_target_features_num = len(pseudo_target_name_list)-1\n",
     "\n",
@@ -150,22 +150,27 @@
     "round_time = 1\n",
     "\n",
     "obs_filter_feature = [item for sublist in obs_feature_msg for item in sublist if item is not time_feature_name]\n",
-    "act_filter_feature = ['m2','lfin','rfin','tfin','bfin','stick','m1','unused0', 'm0', 'unused1','unused2','unused3']\n",
+    "act_filter_feature = ['m2','lfin','rfin','tfin','bfin','stick','m1', 'm0']\n",
     "train_test_split_ratio = (0.99,0.01)\n",
     "act_scale_bnd = {'act_max':2000,\n",
     "                 'act_min':1000,\n",
     "                 'scaled_act_max':1,\n",
     "                 'scaled_act_min':-1}\n",
     "\n",
-    "bool_addNoise = True ##\n",
-    "num_noise_df = 5\n",
+    "bool_addTarget = True\n",
+    "num_target_df = 7\n",
+    "generate_target_distribution_const = 1\n",
+    "target_feature_list = ['target.velocity.x', 'target.velocity.y', 'target.velocity.z'] \n",
+    "\n",
+    "bool_addNoise = True \n",
+    "num_noise_df = 7\n",
     "noise_level = 0.05\n",
     "\n",
     "bool_round = False\n",
     "rounding_factor = 3\n",
     "\n",
     "## Define Reward Function\n",
-    "target_feature_list = ['target.velocity.x', 'target.velocity.y', 'target.velocity.z'] \n",
+    "target_feature_list = target_feature_list\n",
     "obsCost_feature_list = ['velocity.linear.x','velocity.linear.y', 'velocity.linear.z']\n",
     "xy_target_feature_list = target_feature_list[0:1]\n",
     "xy_cost_feature_list = obsCost_feature_list[0:1]\n",
@@ -220,6 +225,9 @@
     "    \"obs_filter_feature\":obs_filter_feature,\n",
     "    \"train_test_split_ratio\":train_test_split_ratio,\n",
     "    'act_scale_bnd':act_scale_bnd,\n",
+    "    \"bool_addTarget\":bool_addTarget,\n",
+    "    \"num_target_df\":num_target_df,\n",
+    "    \"generate_target_distribution_const\":generate_target_distribution_const,\n",
     "    \"bool_addNoise\":bool_addNoise,\n",
     "    \"num_noise_df\":num_noise_df,\n",
     "    \"noise_level\":noise_level,\n",
@@ -1073,6 +1081,9 @@
     "    def data_processsing(self, df, **params):\n",
     "        df = self.scale_df_act(df, act_scale_bnd, act_filter_feature)\n",
     "        \n",
+    "        if bool_addTarget:\n",
+    "            df = self.duplicate_target_df(df, **params)\n",
+    "        \n",
     "        if bool_addNoise:\n",
     "            df = self.duplicate_Noise_df(df, num_noise_df, noise_level)\n",
     "        \n",
@@ -1099,6 +1110,23 @@
     "        scale = ( df_max - df_min ) / (target_max - target_min) \n",
     "        df = ( df - df_mean ) / scale + target_mean\n",
     "        return df\n",
+    "\n",
+    "    def duplicate_target_df(self, df, num_target_df, **params):\n",
+    "        new_df = df\n",
+    "        df_len = len(df.index)\n",
+    "        pseudo_target_shape = (df_len, len(target_feature_list))\n",
+    "        \n",
+    "        for i in range(num_target_df):\n",
+    "            pseudo_target_df = self.generate_pseudo_target(pseudo_target_shape, **params)\n",
+    "            pseudo_target_df.columns = target_feature_list\n",
+    "            df[target_feature_list] = pseudo_target_df\n",
+    "            new_df  = pd.concat([new_df, df], axis=0, ignore_index=True)\n",
+    "        return new_df\n",
+    "    \n",
+    "    def generate_pseudo_target(self, pseudo_target_shape, **params):\n",
+    "        target_noise = generate_target_distribution_const * np.random.uniform(pseudo_target_min, pseudo_target_max, pseudo_target_shape)\n",
+    "        pseudo_target_df = pd.DataFrame(target_noise)\n",
+    "        return pseudo_target_df\n",
     "    \n",
     "    def duplicate_Noise_df(self, df, num_noise_df, noise_level):\n",
     "        new_df = df\n",
